# EzPC

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_AI_Validation  LICENSE  README.md  batchnorm.py  chexpert.cpp  cifar10.hpp  compile_docker_example.sh  compile_fss.sh  dcftest.cpp  ezpc-cli.sh  gpu_main.h  inference.cpp  layers.h  llama-improved-vgg.txt  main.cpp  microbenchmark_rt.cpp  microbenchmark_rtm.cpp  mnist.h  module.cpp  networks.cpp  networks.h  orcav2_exp.cpp  random.cpp  random.h  relutruncate.h  resnet18.cpp  resnet18_acc.cpp  resnet50.cpp  run_docker_example_client.sh  run_docker_example_server.sh  scratch.py  setup_env_and_build.sh  softmax.h  strtest.cpp  temp.txt  temp2.txt  (+6 more)
Athos/onnx-demo/build_dir/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CrypTFlow2/networks/: CMakeLists.txt  main_densenet121_field64.cpp  main_resnet32_cifar_field64.cpp  main_resnet50_ring32.cpp
CrypTFlow2/src/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  fc-field.cpp  fc-field.h
FSS/: .gitignore  CMakeLists.txt  LICENSE  README.md
FSS/benchmarks/: deepsecure.ezpc  heads1.ezpc  heads2.ezpc  heads3.ezpc  industrial.ezpc  lstm.ezpc  minionn-cnn.ezpc  model.inp  resnet18.ezpc  resnet50.ezpc
FSS/cmake/: .gitignore  FSSConfig.cmake.in
FSS/docker/: Dockerfile  README.md  setup_env_and_build.sh
FSS/microbenchmarks/: invsqrt.ezpc  matmul_1.ezpc  matmul_2.ezpc  matmul_3.ezpc  sigmoid.ezpc  signextend.ezpc  tanh.ezpc  truncatereduce.ezpc
FSS/src/: CMakeLists.txt  README.md  add.cpp  add.h  api.cpp  api.h  api_varied.cpp  api_varied.h  array.h  comms.cpp  comms.h  config.h  conv.cpp  conv.h  dcf.cpp  dcf.h  fss.h  group_element.cpp  group_element.h  input_prng.cpp  input_prng.h  keypack.h  lib.ezpc  lib.h  mini_aes.cpp  mini_aes.h  mult.cpp  prng.cpp  pubdiv.cpp  pubdiv.h  spline.cpp  spline.h  utils.cpp  utils.h
FSS/tests/: .gitignore  run.sh  runall.sh
FSS/tests/google30/: input2.txt  main.ezpc  output2.txt
FSS/tests/sigmoid/: input1.txt  main.ezpc  output2.txt
FSS/tests/signextension/: main.ezpc  output2.txt
FSS/tests/tanh/: input1.txt  main.ezpc  output2.txt
FSS/tests/truncatereduce/: input1.txt  main.ezpc  output2.txt
GPU-MPC/ext/sytorch/: .gitignore  CMakeLists.txt  README.md  Toy example- multiple inference.md
Porthos/src/: AESObject.cpp  AESObject.h  CMakeLists.txt  EzPCFunctionalities.cpp  EzPCFunctionalities.h  Functionalities.cpp  Functionalities.h  ParallelAESObject.cpp  ParallelAESObject.h  basicSockets.cpp  basicSockets.h  connect.cpp  connect.h  ezpc.h  globals.h  secondary.cpp  secondary.h  tools.cpp  tools.h
Porthos/src/example_neural_nets/: mainDenseNet121.cpp  mainResNet50.cpp  mainSqNetImgNet.cpp  network_config.h
SCI/: CMakeLists.txt  README.md  setup_external_deps.sh
SCI/cmake/: SCIConfig.cmake  SCIConfig.cmake.in  SecureFixedPointConfig.cmake  install_EMP.cmake  install_Eigen3.cmake
SCI/gpt/: CMakeLists.txt  gpt.cpp  secure_gpt.cpp  secure_gpt_bench.cpp  transfer.sh
SCI/networks/: CMakeLists.txt  main_densenet121.cpp  main_densenet121_ring32.cpp  main_ffnn128.cpp  main_hinet4.cpp  main_lenet128.cpp  main_logistic128.cpp  main_minionn_field64.cpp  main_minionn_ring32.cpp  main_relevance.cpp  main_relevance32.cpp  main_resnet32_cifar_field64.cpp  main_resnet50.cpp  main_resnet50_field64.cpp  main_sqnet_field64.cpp  main_sqnet_ring32.cpp
SCI/networks/inputs/: ffnn_weights.inp  hinet_input4.inp  hinet_labels4.inp  lenet_weights.inp  logistic_input128.inp  logistic_labels128.inp  logistic_weights.inp
SCI/src/: CMakeLists.txt  cleartext_library_float.cpp  cleartext_library_float.h  defines.h  defines_float.h  defines_uniform.h  functionalities_pt.h  functionalities_uniform.h  functionalities_wrapper.h  globals.cpp  globals.h  library_fixed.cpp  library_fixed_common.h  library_fixed_uniform.cpp  library_fixed_uniform.h  library_float.cpp  library_float.h  library_float_beacon.cpp  library_float_common.cpp  library_float_secfloat.cpp
SCI/src/BuildingBlocks/: CMakeLists.txt  aux-protocols.cpp  aux-protocols.h  truncation.cpp  truncation.h  value-extension.cpp  value-extension.h
SCI/src/FloatingPoint/: fixed-point.cpp  fixed-point.h  floating-point.cpp  floating-point.h  (+3 more)
SCI/tests/: CMakeLists.txt  floatml_utils.h  test_HE_conv.cpp  test_HE_elemwise_prod.cpp  test_field_argmax.cpp  test_field_fc.cpp  test_field_maxpool.cpp  test_field_relu.cpp  test_float_compound.cpp  test_floatml_dotprod.cpp  test_floatml_matmul.cpp  test_floatml_sigmoid.cpp  test_floatml_softmax.cpp  test_floatml_vsum.cpp  test_functionalities.cpp  test_linear.cpp  test_ring_argmax.cpp  test_ring_aux_protocols.cpp  test_ring_exp.cpp  test_ring_hadamard_product.cpp  test_ring_library_fixed.cpp  test_ring_matmul.cpp  test_ring_maxpool.cpp  test_ring_relu.cpp  test_ring_sigmoid.cpp  test_ring_sqrt.cpp  test_ring_tanh.cpp  test_ring_truncation.cpp  test_ring_value_extension.cpp
SIRNN/templates/: CMakeLists.txt  CMakeLists.txt_Dataset  main.cpp  predictors.h
backend/minillama/: CMakeLists.txt  and.cpp  and.h  api.cpp  api.h  comms.cpp  comms.h  config.cpp  config.h  conv.cpp  dcf.cpp  dcf.h  float.cpp  float.h  freekey.h  group_element.h  input_prng.cpp  input_prng.h  keypack.h  mic.cpp  mic.h  msnzb.h  mult.cpp  mult.h  prng.h  pubdiv.cpp  pubdiv.h  relu.cpp  relu.h  reluextend.h  relutruncate.cpp  relutruncate.h  select.cpp  select.h  signextend.h  stats.cpp  stats.h  taylor.h  truncate.h  utils.cpp  (+1 more)
ext/llama/: CMakeLists.txt  and.h  api.cpp  conv.cpp  conv.h  dcf.cpp  dcf.h  float.cpp  float.h  mic.cpp  mic.h  msnzb.cpp  msnzb.h  mult.cpp  pubdiv.cpp  pubdiv.h  relu.cpp  relu.h  reluextend.cpp  reluextend.h  relutruncate.cpp  relutruncate.h  select.h  signextend.cpp  signextend.h  taylor.cpp  taylor.h  truncate.h
sytorch/: .gitignore  .gitmodules  CMakeLists.txt  README.md  Toy example- multiple inference.md  Toy example- single inference.md  ezpc-cli-2.sh  ezpc-cli.sh  ramdrive.sh  unmount_ramdrive.sh
sytorch/OnnxBridge/: main.py
sytorch/scripts/: app.py  dealer.py  download_keys.py  gptacc.py  server.py
(+1741 files in other folders)
